fix: floating footer on tablet view

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -7,6 +7,7 @@ main {
   font-family: variables.$font-body;
 
   display: flex;
+  flex: 1 0 auto;
   flex-direction: column;
 
   padding-top: calc(variables.$padding-fluid * 2);
