--- a/assets/css/progetti.scss
+++ b/assets/css/progetti.scss
@@ -5,6 +5,7 @@
 
 main {
   display: flex;
+  flex: 1 0 auto;
   flex-direction: column;
 
   padding-top: calc(variables.$padding-fluid * 2);
